[package]
name = "routing-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.30.0"
fast_paths = "0.2.0"
geo = "0.27.0"
geo-types = "0.7.12"
osmpbf = "0.3.3"
thiserror = "1.0.59"
